# Latry

./: .gitmodules  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: android-debug-build.yml
android/: .gitignore  AndroidAudioRecordInput.cpp  AndroidAudioRecordInput.h  AndroidAudioRouteInterop.cpp  AndroidAudioRouteInterop.h  AndroidAudioTrackOutput.cpp  AndroidAudioTrackOutput.h  AppLaunchMode.h  AudioEngine.cpp  AudioEngine.h  AudioEngineFocus.cpp  AudioEnginePlayback.cpp  AudioEngineRecording.cpp  AudioJitterBuffer.cpp  AudioJitterBuffer.h  AudioLevelMeter.qml  AudioLimiter.cpp  AudioLimiter.h  AudioStreamDevice.cpp  AudioStreamDevice.h  BatteryOptimizationDialog.qml  BatteryOptimizationHandler.cpp  BatteryOptimizationHandler.h  CMakeLists.txt  HomePage.qml  Main.qml  OpusWrapper.cpp  OpusWrapper.h  ProfileCard.qml  ProfileEditorPage.qml  ProfileUtils.js  QuickProfileDialog.qml  QuickSwitchTile.qml  QuickTalkgroupDialog.qml  ReflectorClient.cpp  ReflectorClient.h  ReflectorClientConnection.cpp  ReflectorClientJni.cpp  ReflectorClientProtocol.cpp  ReflectorClientPtt.cpp  (+15 more)
android/android/: AndroidManifest.xml  build.gradle  gradle.properties  proguard-rules.pro
android/android/androidTest/java/yo6say/latry/: AndroidDeviceTestUtils.java  AndroidJniRegistrationInstrumentationTest.java  AndroidManifestInstrumentationTest.java  AudioHardwareInstrumentationTest.java  LatryActivityInstrumentationTest.java  LatryMediaSessionManagerInstrumentationTest.java  VoipBackgroundServiceInstrumentationTest.java  VoipBackgroundServiceLiveInstrumentationTest.java
android/android/res/values/: strings.xml  styles.xml
android/android/src/yo6say/latry/: AndroidIntegrationTestHooks.java  BluetoothA2dpRouter.java  BootReceiver.java  ConnectionProfileStore.java  HardwarePttKeyPolicy.java  HardwarePttLearningCoordinator.java  HardwarePttSettingsStore.java  LatryActivity.java  LatryApplication.java  LatryAudioCaptureProfile.java  LatryAudioRecordInput.java  LatryAudioRouteManager.java  LatryAudioRoutePolicy.java  LatryAudioTrackPlayer.java  LatryMediaSessionManager.java  LatrySentry.java  LatryTranscriptionManager.java  NetworkHandoverMonitor.java  NotificationActionReceiver.java  PTTButtonBroadcastReceiver.java  QtLoaderConflictActivity.java  SppDeviceHelper.java  SppPttScanner.java  VoipBackgroundService.java  VoipServiceLifecyclePolicy.java  VoipServiceStatusFormatter.java
android/android/unitTest/yo6say/latry/: ConnectionProfileStoreSelfTest.java  FakeContext.java  FakeSharedPreferences.java  HardwarePttKeyPolicySelfTest.java  HardwarePttLearningCoordinatorSelfTest.java  HardwarePttSettingsStoreSelfTest.java  LatryAudioCaptureProfileSelfTest.java  LatryAudioRoutePolicySelfTest.java  NotificationActionReceiverSelfTest.java  PTTButtonBroadcastReceiverSelfTest.java  VoipServiceLifecyclePolicySelfTest.java  VoipServiceStatusFormatterSelfTest.java
android/android/unitTestStubs/android/: R.java
android/android/unitTestStubs/android/app/: Notification.java  NotificationChannel.java  NotificationManager.java  PendingIntent.java
android/android/unitTestStubs/android/content/: BroadcastReceiver.java  Context.java  Intent.java  SharedPreferences.java
android/android/unitTestStubs/android/content/pm/: ApplicationInfo.java
android/android/unitTestStubs/android/os/: Build.java  Handler.java  Looper.java
android/android/unitTestStubs/android/util/: Log.java
android/android/unitTestStubs/android/view/: KeyEvent.java
android/android/unitTestStubs/androidx/core/content/: ContextCompat.java
android/android/unitTestStubs/io/sentry/: SentryLevel.java
android/android/unitTestStubs/yo6say/latry/: LatryActivity.java  LatrySentry.java  VoipBackgroundService.java
android/scripts/: android_ssd_env.sh  build_android_emulator_debug.sh  create_android16_avd.sh  run_android_device_suite.sh  run_android_instrumented_tests.sh  run_android_java_route_tests.sh  run_android_service_smoke_tests.sh  run_deadcode_scan.sh  run_live_reflector_tests.sh  start_android16_emulator.sh
android/tests/: CMakeLists.txt  tst_android_audio_route_interop.cpp  tst_app_launch_mode.cpp  tst_audio_engine.cpp  tst_audio_jitter_buffer.cpp  tst_audio_limiter.cpp  tst_battery_optimization_handler.cpp  tst_reflector_client.cpp  tst_reflector_live_integration.cpp  tst_resampler.cpp
android/tests/qml/: quicktest_main.cpp  tst_audio_level_meter.qml  tst_home_page.qml  tst_profile_card.qml  tst_profile_editor_page.qml  tst_profile_utils.qml  tst_quick_talkgroup_dialog.qml  tst_settings_page.qml
iOS/: AudioEngine.cpp  AudioEngine.h  AudioJitterBuffer.cpp  AudioJitterBuffer.h  AudioStreamDevice.cpp  AudioStreamDevice.h  BatteryOptimizationHandler.cpp  CMakeLists.txt  Main.qml  OpusWrapper.cpp  QtAudioPacer.cpp  QtAudioPacer.h  ReflectorClient.cpp  ReflectorClient.h  ReflectorProtocol.h  Resampler.cpp  Resampler.h  main.cpp
iOS/ios/: BUILD_INSTRUCTIONS.md  IOSAudioManager.h  IOSAudioManager.mm  IOSVoIPHandler.cpp  IOSVoIPHandler.h  Info.plist  LaunchScreen.storyboard
iOS/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
